--- a/Chat/template/login.ejs
+++ b/Chat/template/login.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="Chat">
+<html lang="en">
   <head>
 
     <title>Chat</title>
@@ -11,8 +11,9 @@
     <!-- Scripts -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-resource.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-resource.min.js"></script>
+
     <script src="http://d3js.org/d3.v3.min.js"></script>
     
     <script src="js/login.js"></script>
@@ -25,7 +26,7 @@
     
     <div class="container">
       <div class="sign_in_form">
-        <form method="post" action="/sign#chat">
+        <form method="post" action="/sign">
           <div class="form-group">
             <label for="login" class="control-label">Nickname:</label>
             <input name="nick" type="text" class="form-control" id="input-nickname" placeholder="Place choose your nickname">
