--- a/Chat/template/main.ejs
+++ b/Chat/template/main.ejs
@@ -6,7 +6,11 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="library/ng-dialog/css/ngDialog.css" rel="stylesheet">
+    <link href="library/ng-dialog/css/ngDialog-theme-default.css" rel="stylesheet">
+    <link href="library/ng-dialog/css/ngDialog-theme-flat.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
 
     <!-- Scripts -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -14,8 +18,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-resource.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
     
+    <script src="library/ng-dialog/js/ngDialog.min.js"></script>
+    <script src="js/components/pageslider.js"></script>
     <script src="js/main.js"></script>
     
   </head>
@@ -31,12 +36,17 @@
 
     
     <div class="container">
-      <div class="navigation">
+      <div class="navigation" ng-controller="TopNavigation">
         <ul class="menu">
           <li class="active"><a href="#chat">Chat </a></li>
           <li><a href="#users_online"> Users Online </a></li>
-          <li><a href="#profile"> My profile </a></li>
+          <li><a href="#profile"> My profile </a></li>          
         </ul>
+
+        <% if(nick === '"root"') { %>
+          <a href="#console" id="console" ng-click="openDialog()">Console</a>
+        <% } %>  
+
       </div>
 
       <div class="chat">
@@ -65,6 +75,18 @@
     </div><!-- /.container -->
     
 
+    <script type="text/ng-template" id="rootConsole">
+      <div class="root-console">
+        <h3> Console </h3>
+        <div class="info">
+        </div>
+        <div class="result-area">
+        </div>
+        <div class="input-area">
+          <input type="text" class="form-control"/>
+        </div>
+      </div>  
+    </script>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
